--- a/stepCountByAccelerometer/Base.lproj/Main.storyboard
+++ b/stepCountByAccelerometer/Base.lproj/Main.storyboard
@@ -110,6 +110,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="coi-Ld-jZD">
+                                <rect key="frame" x="9" y="77" width="189" height="74"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -121,6 +128,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="u1R-Wi-U6U"/>
                     <connections>
+                        <outlet property="frequencyLabel" destination="coi-Ld-jZD" id="fsx-in-K8L"/>
                         <outlet property="lineChartView" destination="IUW-9k-0Yb" id="jvs-bS-iwd"/>
                         <outlet property="navBar" destination="kFX-El-hTa" id="ujO-cs-pb2"/>
                         <outlet property="outputLabel" destination="byf-UH-zM7" id="LW2-Rs-UVq"/>
